# test-submission-schema

./: .gitignore  .pre-commit-config.yaml  README.md  hatch_build.py  pull_request_template.md  pyproject.toml
.github/workflows/: automatic-doc-checks.yml  markdown-style-checks.yml  pr-validation.yaml  pre-commit.yaml  sphinx-python-dependency-build-checks.yml
docs/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  Makefile.sp  conf.py  contributing.md  index.md
docs/.sphinx/: .wordlist.txt  requirements.txt
docs/.sphinx/_static/css/: custom.css
docs/.sphinx/test_submission_schema/: generate_schema_doc.py
docs/explanation/: index.md
docs/how-to/: index.md
docs/reference/: index.md  submission_schema_v1.rst  submission_schemas.md  test_submission_schemas.md
docs/reference/submission_schemas/: v1.rst
docs/tutorial/: index.md
test_submission_schema/: v1.json
test_submission_schema/schemas/: v1.json
